Added Folia & Spigot support